# final_death

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  build.bat  config.h.in  levels.json
assets/player/: misc_animated_bullet_01.json  misc_animated_bullet_v_01.json  player_fire_alt.json  player_fire_backdodge.json  player_fire_backshot.json  player_fire_crouch.json  player_fire_jumping.json  player_fire_jumping_downshot.json  player_fire_killself_count.json  player_fire_killself_fire.json  player_fire_standing.json  player_fire_upwards.json  player_hit_dead.json  player_hit_items_drop.json  player_idle_crouch.json  player_idle_standing.json  player_idle_up.json  player_jump.json  player_jump_dust_h.json  player_jump_dust_l.json  player_land.json  player_noweapon_getsg.json  player_noweapon_idle.json  player_noweapon_roll.json  player_noweapon_walk.json  player_roll.json  player_walk.json
assets/tiles/: stick_man-20250719-230604.piskel
include/: actor_state.h  animated_sprite.h  animation_manager.h  basic_types.h  camera.h  clock.h  components.h  game_clock.h  game_configuration.h  global_defs.h  grid.h  input_capture.h  input_processor.h  load_game_configuration.h  physics_engine.h  platformer.h  player.h  player_state.h  registry.h  registry_helpers.h  rendering_engine.h  sound.h  sound_player.h  state.h  tileset.h  update_player_state.h
include/common_types/: entity.h  grid.h  specialized_state.h
include/input/: input_capture.h  input_processor.h
include/systems/: physics_system.h  sound_system.h
include/utils/: check.h  chrono_helpers.h  developer_console.h  game_clock.h  logging.h  parameter_server.h  rate_timer.h  simple_profiler.h
notes/: idea_for_extending_common_state.h
src/: animated_sprite.cc  animation_manager.cc  camera.cc  developer_console.cc  global_defs.h  input_capture.cc  input_processor.cc  load_game_configuration.cc  main.cc  physics_engine.cc  platformer.cc  platformer.h  player.cc  registry.h  rendering_engine.cc  sound.cc  sound_player.cc  tileset.cc  update_player_state.cc
src/animation/: animated_sprite.cc  animated_sprite.h  animation_event.h  animation_frame_index.h  animation_manager.cc  animation_manager.h  simple_sprites.cc  simple_sprites.h  sprite_manager.cc  sprite_manager.h
src/common_types/: actor_state.h  basic_types.h  components.h  entity.h  game_configuration.h  grid.h  sprite.h  tileset.cc  tileset.h
src/input/: input_capture.cc  input_capture.h  input_processor.cc  input_processor.h
src/olc/: olcPixelGameEngine.cc
src/sound/: sound_player.cc  sound_processor.cc  sound_processor.h
src/systems/: developer_console.cc  developer_console.h  physics_system.cc  physics_system.h  player_logic_system.cc  player_logic_system.h  projectile_system.cc  projectile_system.h  rendering_system.cc  rendering_system.h
src/utils/: check.h  chrono_helpers.h  console_commands.cc  console_commands.h  developer_console.cc  developer_console.h  game_clock.h  logging.h  parameter_server.h  random_number_generator.h  rate_timer.h  simple_profiler.h  windows_high_res_timer.h
test/: test_main.cc
